--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -25,6 +25,9 @@
       register: ec2
       delegate_to: localhost
 
+    - name: show me the ec2 variable
+      var: ec2
+
     - name: wait for instances to come up
       wait_for_connection:
         delay: 30
