--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -35,4 +35,4 @@
         delay: 30
       loop: "{{ ec2.instances }}"
       delegate_to: "{{ item.public_dns_name }}"
-      when: ec.instances|length > 0
+      when: ec2.instances|length > 0
