Ignore the actual inventory

--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -1,6 +1,6 @@
 ---
 - name: create instance(s) on ec2
-  hosts: all
+  hosts: localhost
   remote_user: root
   vars:
     instance_ip_addresses: []
