--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -11,11 +11,12 @@
         auth_kind: serviceaccount
         name: automates2019template
         project: ansible-automates-20191211 
-        properties:
-          tags:
-            items:
-              "{{ tag }}"
-      state: present
+        labels:
+          event: "{{ tag }}"
+        machine_type: n1-standard-1
+        state: present
+        status: RUNNING
+        zone: europe-west4-a
       register: instancetemplate
       delegate_to: localhost
 
