--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -14,6 +14,11 @@
         labels:
           event: "{{ tag }}"
         machine_type: n1-standard-1
+        network_interfaces:
+          - network: default
+            access_configs:
+              - name: External NAT
+                type: ONE_TO_ONE_NAT
         state: present
         status: RUNNING
         zone: europe-west4-a
