--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -19,6 +19,7 @@
         machine_type: n1-standard-1
         disks:
           - auto_delete: yes
+            boot: yes
             initialize_params:
               disk_size_gb: 20
               source_image: projects/rhel-cloud/global/images/rhel-7-v20191121
