--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -41,20 +41,24 @@
             var: gce
             verbosity: 2
 
+        - name: set public_ip fact
+          set_fact:
+            public_ip: "{{ gce.networkInterfaces[0].accessConfigs[0].natIP }}"
+
         - name: show me the natIP variable
           debug:
-            var: gce.networkInterfaces[0].accessConfigs.natIP
+            var: public_ip
             verbosity: 2
 
         - name: wait for instances to come up
           wait_for_connection:
             delay: 10
           remote_user: maxim
-          loop: "{{ gce.networkInterfaces[0].accessConfigs.natIP }}"
+          loop: "{{ public_ip }}"
 
         - name: add public ip address to list
           set_fact:
-            instance_ip_addresses: "['{{ gce.networkInterfaces[0].accessConfigs.natIP }}']"
+            instance_ip_addresses: "['{{ public_ip }}']"
 
         - name: show me the instance_ip_addresses variable
           debug:
