--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -30,7 +30,7 @@
                 type: ONE_TO_ONE_NAT
         state: present
         status: RUNNING
-        zone: europe-west4-a
+        zone: europe-west2-a
       register: gce
       delegate_to: localhost
 
@@ -54,7 +54,7 @@
           wait_for_connection:
             delay: 10
           remote_user: maxim
-          loop: "{{ public_ip }}"
+          loop: "[ {{ public_ip }} ]"
 
         - name: add public ip address to list
           set_fact:
