--- a/create_azure_instances.yml
+++ b/create_azure_instances.yml
@@ -77,3 +77,9 @@
           publisher: RedHat
           sku: '7.7'
           version: latest
+      register: azure
+
+    - name: show me the azure variable
+      debug:
+        var: azure
+        verbosity: 2
