--- a/create_azure_instances.yml
+++ b/create_azure_instances.yml
@@ -18,7 +18,7 @@
       azure_rm_virtualnetwork:
         resource_group: automates2019
         name: automates2019
-        address_prefix: "10.0.0.0/16"
+        address_prefixes: "10.0.0.0/16"
         tags: 
           event: automates2019
         state: present
