--- a/setup_custom_facts.yml
+++ b/setup_custom_facts.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: yes
   remote_user: ec2-user
-  gather_facts: no
+  gather_facts: yes
 
   tasks:
     - name: create custom fact directory
