--- a/cleanup.yml
+++ b/cleanup.yml
@@ -19,7 +19,6 @@
           event: "{{ tag }}"
         vpc_subnet_id: subnet-900e39da
         group_id: sg-b2d436da
-      delegate_to: localhost
 
     - name: clean up gcp
       gcp_compute_instance:
@@ -28,7 +27,6 @@
         project: ansible-automates-20191211
         state: absent
         zone: europe-west2-a
-      delegate_to: localhost
 
     - name: delete azure vm
       azure_rm_virtualmachine:
@@ -36,28 +34,27 @@
         name: automates2019
         state: absent
         remove_on_absent: all
-      register: azure
 
-    - name: create nsg that allows ssh and http
+    - name: delete nsg
       azure_rm_securitygroup:
         resource_group: automates2019
         name: automates2019
         state: absent
 
-    - name: create subnet
+    - name: delete subnet
       azure_rm_subnet:
         resource_group: automates2019
         virtual_network_name: automates2019
         name: automates2019
         state: absent
 
-    - name: create network
+    - name: delete network
       azure_rm_virtualnetwork:
         resource_group: automates2019
         name: automates2019
         state: absent
 
-    - name: create resource group
+    - name: delete resource group
       azure_rm_resourcegroup:
         name: automates2019
         location: westeurope
