cleanup non empty resourcegroup

--- a/cleanup.yml
+++ b/cleanup.yml
@@ -58,4 +58,5 @@
       azure_rm_resourcegroup:
         name: automates2019
         location: westeurope
+        force_empty_nonempty: yes
         state: absent
