--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -48,23 +48,17 @@
         var: public_ip
         verbosity: 2
 
+    - name: add new hosts to tmpgroup
+      add_host:
+        name: "{{ public_ip }}"
+        groups: tmpgroup
+
+- name: check connectivity
+  hosts: tmpgroup
+  remote_user: ec2-user
+  gather_facts: no
+
+  tasks:
     - name: wait for instances to come up
       wait_for_connection:
         delay: 10
-      remote_user: maxim
-      loop: 
-        - "{{ public_ip }}"
-
-    - name: add public ip address to list
-      set_fact:
-        instance_ip_addresses: "['{{ public_ip }}']"
-
-    - name: show me the instance_ip_addresses variable
-      debug:
-        var: instance_ip_addresses
-        verbosity: 2
-
-    - name: pass on the data :)
-      set_stats:
-        data:
-          instance_ip_addresses: "{{ instance_ip_addresses }}"
