--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -12,7 +12,7 @@
     - name: create instance(s) on gce
       gcp_compute_instance:
         auth_kind: serviceaccount
-        name: automates2019
+        name: automates2019gce
         project: ansible-automates-20191211
         labels:
           event: "{{ tag }}"
