move ec2.instances variable

--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -29,8 +29,7 @@
       add_host:
         name: "{{ item.public_dns_name }}"
         groups: tmpgroup
-      loop:
-        - "{{ ec2.instances }}"
+      loop: "{{ ec2.instances }}"
 
     - name: show me the ec2 variable
       debug:
