Fixed wrong user, missing become: yes

--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -39,6 +39,7 @@
 - name: check connectivity and set-up user
   hosts: tmpgroup
   remote_user: ec2-user
+  become: yes
   gather_facts: no
 
   tasks:
