--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -55,7 +55,8 @@
 
 - name: check connectivity
   hosts: tmpgroup
-  remote_user: ec2-user
+  remote_user: maxim
+  become: yes
   gather_facts: no
 
   tasks:
