--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -59,7 +59,7 @@
   become: yes
   gather_facts: no
   vars:
-    ansible_python_interpreter: /usr/bin/python
+    ansible_python_interpreter: /usr/libexec/platform-python
 
   tasks:
     - name: wait for instances to come up
