--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -2,5 +2,6 @@
 roles:
 - robertdebock.epel
 - robertdebock.fail2ban
+- git+https://github.com/wzzrd/ansible-role-firewall,add_rhel78_support
 - unxnn.chrony
 - geerlingguy.haproxy
