--- a/setup_custom_facts.yml
+++ b/setup_custom_facts.yml
@@ -19,11 +19,11 @@
         dest: /etc/ansible/facts.d/facts.fact
         mode: 0755
 
-    - name: reload ansible_local
-      setup:
-
     - name: set external ip address fact
       set_fact:
         ansible_host: "{{ ansible_ssh_host }}"
         cacheable: yes
-      when: ansible_local['facts']['cloud'] == "google"
+      when: cloud == "google"
+
+    - name: reload ansible_local
+      setup:
