tag instance for network traffic over http

--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -31,6 +31,9 @@
         state: present
         status: RUNNING
         zone: europe-west2-a
+        tag:
+          items:
+            - http-server
       register: gce
       delegate_to: localhost
 
