--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -31,7 +31,7 @@
         state: present
         status: RUNNING
         zone: europe-west2-a
-        tag:
+        tags:
           items:
             - http-server
       register: gce
