robert's role should be ok now

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -3,9 +3,7 @@
 
 - src: robertdebock.fail2ban
 
-- src: git+https://github.com/wzzrd/ansible-role-firewall
-  version: add_rhel78_support
-  name: robertdebock.firewall
+- src: robertdebock.firewall
 
 - src: unxnn.chrony
 
