move setup_facts into all provisioning templates

--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -39,7 +39,10 @@
   hosts: tmpgroup
   remote_user: ansible
   become: yes
-  gather_facts: no
+  gather_facts: yes
+  vars:
+    cloud: aws
+    server_role: webserver
 
   tasks:
     - name: wait for instances to come up
