fix timeout, and syntax error in aws playbook

--- a/create_gce_instances.yml
+++ b/create_gce_instances.yml
@@ -60,7 +60,7 @@
   hosts: tmpgroup
   remote_user: ansible
   become: yes
-  gather_facts: yes
+  gather_facts: no
   vars:
     cloud: google
     server_role: webserver
