--- a/create_ec2_instances.yml
+++ b/create_ec2_instances.yml
@@ -20,8 +20,8 @@
           event: "{{ tag }}"
         vpc_subnet_id: subnet-900e39da
         group_id: sg-b2d436da
+        user_data: "{{ lookup('template', 'cloud-config.txt.j2' }}"
       register: ec2
-      user_data: "{{ lookup('template', 'cloud-config.txt.j2' }}"
       delegate_to: localhost
 
     - name: add new hosts to tmpgroup
@@ -39,7 +39,7 @@
   hosts: tmpgroup
   remote_user: ansible
   become: yes
-  gather_facts: yes
+  gather_facts: no
   vars:
     cloud: aws
     server_role: webserver
