--- a/create_azure_instances.yml
+++ b/create_azure_instances.yml
@@ -110,7 +110,7 @@
   hosts: tmpgroup
   remote_user: ansible
   become: yes
-  gather_facts: yes
+  gather_facts: no
   vars:
     cloud: azure
     server_role: webserver
