--- a/configure_app.yml
+++ b/configure_app.yml
@@ -9,4 +9,4 @@
       git:
         dest: /var/www/html
         repo: https://github.com/wzzrd/automates_webapp
-        version: v1.0
+        version: "{{ app_version }}"
