--- a/configure_app.yml
+++ b/configure_app.yml
@@ -10,3 +10,10 @@
         dest: /var/www/html
         repo: https://github.com/wzzrd/automates_webapp
         version: "{{ app_version }}"
+        force: yes
+
+    - name: replace app token
+      replace:
+        path: /var/www/html/index.html
+        regexp: REPLACE_THIS_TOKEN
+        replace: "{{ hostvars[item]['ansible_local']['facts']['external_ip'] }}"
