run as ansible, not ec2-user

--- a/multilevel/configure_os.yml
+++ b/multilevel/configure_os.yml
@@ -1,7 +1,7 @@
 ---
 - name: configure operating system
   hosts: all
-  remote_user: ec2-user
+  remote_user: ansible
   become: yes
   vars:
     chrony_timezone: Europe/Amsterdam
