--- a/multilevel/configure_app.yml
+++ b/multilevel/configure_app.yml
@@ -5,7 +5,7 @@
   become: no
 
   tasks:
-    - name: clone app repo
+    - name: deploy version 1 of the app
       git:
         dest: /var/www/html
         repo: https://github.com/wzzrd/automates_webapp
