--- a/simple/simple_deployment.yml
+++ b/simple/simple_deployment.yml
@@ -19,7 +19,7 @@
     - name: deploy version 1 of the app
       git:
         dest: /var/www/html
-        repo: https://github.com/wzzrd/automates_webapp
+        repo: https://github.com/wzzrd/automates_webapp.git
         version: v1.0
 
     - name: make sure permissions are ok
